objects/bofc__BOFC_Picklist_ValueSet__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Active_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active/Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Master_Label__c</fullName>
        <label>Master Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__OName__c</fullName>
        <label>OName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Global Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__fNames__c</fullName>
        <label>fNames</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__pFieldName__c</fullName>
        <label>pFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFC Picklist ValueSet</label>
    <nameField>
        <label>BOFC Object Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Picklist ValueSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>